--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ AUTH_KEY=OLBpTuGqv0d8s2bcYz5e1Hguva46tG07
 
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=94t£eo/nJl95
-DB_NAME=smartbugle
+DB_PASSWORD=
+DB_NAME=heartrate_monitor
 
 
